--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.jadice.flow.client.s3</groupId>
-    <artifactId>s3-java-example</artifactId>
+    <artifactId>s3-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
