--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -41,14 +41,6 @@ jobs:
             exit -1
           fi
 
-      ## Enable Caching
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
       ## Configure JDK 11
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -71,11 +63,10 @@ jobs:
           echo Releasing as ${{ steps.semanticversion.outputs.new_version }}
           mvn $MAVEN_CLI_OPTS versions:set -DnewVersion=${{ steps.semanticversion.outputs.new_version }}
 
-      - name: Perform build and analysis
+      - name: Perform build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn $MAVEN_CLI_OPTS package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        run: mvn $MAVEN_CLI_OPTS package -DskipTests
 
       ## Deploy
       - name: Deploy package
