--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -41,7 +41,6 @@ jobs:
             exit -1
           fi
 
-      ## Configure JDK 11
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -49,13 +48,11 @@ jobs:
           java-version: '11'
           cache: 'maven'
 
-      ## Build with maven
       - name: Prepare maven settings
         env:
-          REPO_URL: ${{ secrets.LEVIGO_NEXUS_REPO_RELEASES }}
-          REGISTRY_URL: ${{ secrets.LEVIGO_NEXUS_REGISTRY_RELEASES }}
-          REPOSITORY_USERID: ${{ secrets.LEVIGO_NEXUS_USERNAME }}
-          REPOSITORY_CREDENTIALS: ${{ secrets.LEVIGO_NEXUS_PASSWORD }}
+          REPO_URL: ${{ secrets.NEXUS2_REPO_RELEASES }}
+          REPOSITORY_USERID: ${{ secrets.PUB_NEXUS2_USERNAME_RW }}
+          REPOSITORY_CREDENTIALS: ${{ secrets.PUB_NEXUS2_PASSWORD_RW }}
         run: |
           mkdir -p ~/.m2
           envsubst < ./.github/settings.xml > ~/.m2/settings.xml
@@ -67,16 +64,18 @@ jobs:
           mvn $MAVEN_CLI_OPTS versions:set -DnewVersion=${{ steps.semanticversion.outputs.new_version }}
 
       - name: Perform build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        run: mvn $MAVEN_CLI_OPTS package -DskipTests
+        run: mvn $MAVEN_CLI_OPTS package -DskipTests -Dmaven.test.failure.ignore=true
 
-      ## Deploy
-      - name: Deploy package
-        run: |
-          mvn $MAVEN_CLI_OPTS package -Dmaven.test.failure.ignore=true
+     - name: Publish Test Report
+       uses: scacap/action-surefire-report@v1
+       with:
+         github_token: ${{ secrets.GITHUB_TOKEN }}
+         fail_on_test_failures: true
+         fail_if_no_tests: false
 
-      ## Notify Slack
+      - name: Deploy artifacts
+        run: mvn $MAVEN_CLI_OPTS deploy -Dmaven.test.skip.exec=true -Dmaven.install.skip=true
+
       - name: Notify slack
         uses: hennejg/slack-build-notifier@v1.1
         with:
