--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!-- dependencies -->
-        <aws-java-sdk-s3.version>1.12.232</aws-java-sdk-s3.version>
+        <aws-java-sdk-s3.version>1.12.257</aws-java-sdk-s3.version>
         <slf4j.version>1.7.36</slf4j.version>
         <jaxb.version>2.3.1</jaxb.version>
-        <junit.version>5.8.1</junit.version>
+        <junit.version>5.8.2</junit.version>
         <snakeyml.version>1.30</snakeyml.version>
         <!-- plugins -->
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+        <maven-assembly-plugin.version>3.4.1</maven-assembly-plugin.version>
         <!-- sonarcloud -->
         <sonar.organization>levigo</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.8.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
