--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,47 +3,66 @@ name: Continuous Integration
 on:
   push:
     branches-ignore:
-      - main
+      - 'main'
     paths-ignore:
-      - '.github/**'
-      - '**/README.md'
-env:
-  # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
-  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
-  MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
-  # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
-  # when running from the command line.
-  # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
-  MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
+      - '.github/workflows/helm-chart-release.yml'
+      - 'helm/**'
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
+    runs-on: ubuntu-20.04
+    timeout-minutes: 5
+    env:
+      # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
+      # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
+      MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
+      # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
+      # when running from the command line.
+      # `installAtEnd` and `deployAtEnd` are only effective with recent version of the corresponding plugins.
+      MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -DdeployAtEnd=true"
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      ## Enable Caching
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+      - name: Set up Env
+        run: |
+          echo "SONAR_ANALYSIS_ENABLED=${{ secrets.SONAR_ANALYSIS_ENABLED }}" >> $GITHUB_ENV
 
-        ## Configure JDK 11
-      - name: Set up JDK 11
+      ## Configure JDK
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '11'
           cache: 'maven'
 
-      ## Build with maven
-      - name: Perform build and analysis
+      ## Configure maven settings
+      - name: Prepare maven settings
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn $MAVEN_CLI_OPTS verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+          REGISTRY_URL: ${{ secrets.LEVIGO_NEXUS_REGISTRY_SNAPSHOTS }}
+          REPOSITORY_URL: ${{ secrets.LEVIGO_NEXUS_REPO_ALL }}
+          REPOSITORY_USERID: ${{ secrets.LEVIGO_NEXUS_USERNAME }}
+          REPOSITORY_CREDENTIALS: ${{ secrets.LEVIGO_NEXUS_PASSWORD }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_LOGIN: ${{ secrets.SONAR_LOGIN }}
+        run: |
+          mkdir -p ~/.m2
+          envsubst < ./.github/settings.xml > ~/.m2/settings.xml
+
+      ## Build with maven
+      - name: Perform build
+        run: mvn $MAVEN_CLI_OPTS verify -Dmaven.test.failure.ignore=true
+
+      ## Publish test report
+      - name: Publish Test Report
+        uses: scacap/action-surefire-report@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          fail_on_test_failures: true
+          fail_if_no_tests: false
+
+      ## Static code analysis with sonarqube
+      - name: Perform sonar analysis
+        if: env.SONAR_ANALYSIS_ENABLED == 'true'
+        continue-on-error: true
+        run: mvn $MAVEN_CLI_OPTS sonar:sonar -Dsonar.scm.disabled=true -Dsonar.qualitygate.wait=true
