--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 10
 
     steps:
@@ -26,7 +26,7 @@ jobs:
 
       - name: Bump version and create tag
         id: semanticversion
-        uses: hennejg/github-tag-action@v4.2.4
+        uses: mathieudutour/github-tag-action@v6.1
         with:
           release_branches: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -78,9 +78,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
+          name: Release ${{ steps.semanticversion.outputs.new_version }}
           tag_name: ${{ steps.semanticversion.outputs.new_tag }}
-          release_name: Release ${{ steps.semanticversion.outputs.new_version }}
