--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,15 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <!-- dependencies -->
-        <aws-java-sdk-s3.version>1.12.324</aws-java-sdk-s3.version>
+        <aws-java-sdk-s3.version>1.12.504</aws-java-sdk-s3.version>
         <slf4j.version>1.7.36</slf4j.version>
         <jaxb.version>2.3.1</jaxb.version>
-        <junit.version>5.9.1</junit.version>
-        <snakeyml.version>1.33</snakeyml.version>
+        <junit.version>5.9.3</junit.version>
+        <snakeyml.version>2.0</snakeyml.version>
         <!-- plugins -->
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <!-- sonarcloud -->
         <sonar.organization>levigo</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -67,6 +68,11 @@
                     <release>11</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
             </plugin>
             <!-- Maven Assembly Plugin -->
             <plugin>
