fix(JF-1291): add subdir

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,6 +2,7 @@ publisher:
   s3:
     endpoint: "https://s3.us-east-404.amazonaws.com"
     bucket: "s3-java-example"
+    subdir: "results"
     region: "us-east-404"
     accessKey: "1234567890"
     secretKey: "abcdefghijklmnopqrstuvwxyz"
